# BestellDesk

./: .env  .gitignore  Cargo.toml  README.md  app.py
.github/workflows/: release.yml
src/: auth.rs  config.rs  db.rs  main.rs  model.rs
src/services/: admin_users.rs  agent_client.rs  backup.rs  categories.rs  dishes.rs  mod.rs  orders.rs  settings.rs  suppliers.rs  updater.rs
src/ui/: admin.rs  mod.rs  order.rs
static/: admin.css  admin_bearbeiten.css  admin_bestellungen.css  admin_bestellvorschau.css  admin_lieferant_bearbeiten.css  admin_lieferanten.css  admin_zeitfenster.css  bestellung.css
templates/: admin.html  admin_bearbeiten.html  admin_bestellungen.html  admin_bestellvorschau.html  admin_lieferadresse_bearbeiten.html  admin_lieferadressen.html  admin_lieferant_bearbeiten.html  admin_lieferanten.html  admin_zeitfenster.html  bestellung.html
