[package]
name = "bestellapp"
version = "0.4.0"
edition = "2024"

[dependencies]
eframe = "0.32.1"
egui = "0.32.1"
mongodb = { version = "3.2.5", features = ["dns-resolver", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
directories = "6.0.0"
anyhow = "1.0.99"
thiserror = "2.0.16"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
argon2 = "0.5.3"
rand = "0.8"
uuid = "1.18.0"
nanoid = "0.4.0"
aes-gcm = "0.10.3"
aes = "0.8.4"
base64 = "0.22.1"
getrandom = "*"