[package]
name = "BestellDesk"
version = "0.6.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.99"
argon2 = "0.5.3"
base64 = "0.22.1"
directories = "6.0.0"
dotenvy = "0.15.7"
eframe = { version = "0.32.1" , features = ["wgpu"] }
egui = "0.32.1"
flate2 = "1.1.2"
futures-util = "0.3.31"
getrandom = "0.3.3"
mongodb = { version = "3.2.5", features = ["dns-resolver", "rustls-tls"] }
nanoid = "0.4.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
semver = "1.0.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tar = "0.4.44"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = "1.18.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }